# Covid-Test-System

./: An_Vuong_FinalProject.cpp  An_Vuong_FinalProject.h  CMakeLists.txt
